fix(css): hide overflow

--- a/style/main.css
+++ b/style/main.css
@@ -28,8 +28,7 @@ section {
   width: 100%;
   min-height: 100vh;
   min-height: calc(var(--vh, 1vh) * 100);
-  max-height: 100vh;
-  max-height: calc(var(--vh, 1vh) * 100);
+  overflow: hidden;
 }
 
 section.hero {
